--- a/src/app/juros/juros.component.html
+++ b/src/app/juros/juros.component.html
@@ -4,10 +4,11 @@
 <input type="number" step="0.01" [(ngModel)]="vp"/>
 <br />
 <div>Juros (em %)</div>
-<input type="number" step="0.01" />
+<input type="number" step="0.01"  [(ngModel)]="j" />
 <br />
 <div>Periodo (em meses)</div>
-<input type="number" step="1" />
+<input type="number" step="1"  [(ngModel)]="n"/>
 
 <h3>Valor Futuro</h3>
-<h4>{{vp}}</h4>
+<!-- <h4>R$ {{vp*(1+j/100*n)}}</h4> -->
+<h4>{{getJuros()}}</h4>
